--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 numpy==1.16.3
-opencv-python==4.1.0.25
+opencv-contrib-python==3.3.0.9
 pdf2image==1.5.4
 Pillow==6.0.0
 pytesseract==0.2.6
